--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Tagesschrift&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./src/css/style.css">
 <link rel="stylesheet" href="./src/css/reset.css">
+<link rel="stylesheet" href="./src/css/responsivo.css">
     <title>Ver One Piece</title>
 </head>
 
@@ -24,7 +25,7 @@
                     Nami
                 </h2>
                 <p class="descricao">
-                    é a navegadora inteligente e estratégica dos Chapéus de Palha, conhecida por sua habilidade em mapas
+                    É a navegadora inteligente e estratégica dos Chapéus de Palha, conhecida por sua habilidade em mapas
                     e clima. Apesar de seu amor por dinheiro, ela tem um coração leal e luta com coragem ao lado de seus
                     amigos.
                 </p>
@@ -198,6 +199,7 @@
                 <img src="src/assets/tripulacao-sanji.png" alt="sanji-logo">
             </button>
         </li>
+        
         <li>
             <button class="botao ">
                 <img src="src/assets/logos-franky.PNG" alt="Franky-logo">
@@ -211,6 +213,11 @@
         <li>
             <button class="botao ">
                 <img src="src/assets/logos-jinbe.png" alt="jinbe-logo">
+            </button>
+        </li>
+         <li>
+            <button class="botao ">
+                <img src="src/assets/tripulacao-robin.png" alt="robin-logo">
             </button>
         </li>
     </ul>
