--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="./src/css/style.css">
 <link rel="stylesheet" href="./src/css/reset.css">
 <link rel="stylesheet" href="./src/css/responsivo.css">
+<link rel="shortcut icon" href="src/assets/tripulacao-luffy.png" type="image/x-icon">
     <title>Ver One Piece</title>
 </head>
 
