--- a/index.html
+++ b/index.html
@@ -7,19 +7,24 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tagesschrift&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="./src/css/style.css">
-<link rel="stylesheet" href="./src/css/reset.css">
-<link rel="stylesheet" href="./src/css/responsivo.css">
+<link rel="stylesheet" href="src/css/reset.css">
+<link rel="stylesheet" href="src/css/style.css">
+<link rel="stylesheet" href="src/css/responsivo.css">
 <link rel="shortcut icon" href="src/assets/tripulacao-luffy.png" type="image/x-icon">
+…
+<script defer src="src/js/index.js"></script>
+
     <title>Ver One Piece</title>
 </head>
 
 <body>
     <main class="personagens">
+        <!-- <button class="botao-central">Ver One Piece</button> -->
+
         <div class="personagem selecionado">
             <img class="img" src="./src/assets/personagem-nami.png" alt="personagem-nami">
             <div class="conteudo">
-                <i class="logo">
+                <i class="logo" >
 
                 </i>
                 <h2 class="nome-personagem">
