--- a/index.html
+++ b/index.html
@@ -208,22 +208,22 @@
         
         <li>
             <button class="botao ">
-                <img src="src/assets/logos-franky.PNG" alt="Franky-logo">
+                <img src="src/assets/tripulacao-robin.png" alt="Nico Robin-logo">
             </button>
         </li>
         <li>
             <button class="botao ">
-                <img src="src/assets/logos-brook.PNG" alt="Brook-logo">
+                <img src="src/assets/logos-franky.PNG" alt="Brook-logo">
             </button>
         </li>
         <li>
             <button class="botao ">
-                <img src="src/assets/logos-jinbe.png" alt="jinbe-logo">
+                <img src="src/assets/logos-brook.PNG" alt="jinbe-logo">
             </button>
         </li>
          <li>
             <button class="botao ">
-                <img src="src/assets/tripulacao-robin.png" alt="robin-logo">
+                <img src="src/assets/logos-jinbe.png" alt="jinbe-logo">
             </button>
         </li>
     </ul>
